k8s-gcp/service-app-py.yaml
kind: Service
apiVersion: v1
metadata:
  name:  service-app-py
spec:
  selector:
    app:  app-py
  type:  ClusterIP
  ports:
  - name:  app-py-port
    port:  8000
    targetPort:  8080
