k8s-gcp/ingress-app-py.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-py
  namespace: app-py
spec:
  defaultBackend:
    service:
      name: service-app-py
      port:
        number: 8000
